Convert notebooks to scripts

--- a/linear_regression_python.ipynb
+++ b/linear_regression_python.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "2ea1a20a-473a-4604-967f-8082f24c0d76",
    "metadata": {},
    "outputs": [],
@@ -21,17 +21,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "40b6e2dc-c060-4647-89a1-6df8f3fbcc33",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x15224fc4ec20>"
+       "<matplotlib.collections.PathCollection at 0x152275c51960>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -48,7 +48,7 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "plt.scatter(dataset[\"YearsExperience\"], dataset[\"Salary\"], color=\"red\")"
+    "plt.scatter(dataset[[\"YearsExperience\"]], dataset[[\"Salary\"]], color=\"red\")"
    ]
   },
   {
